feat: add Sonar, Fix Helm (now all is working), fix names, delete k8s manifests